ubiquity (2.11.15) UNRELEASED; urgency=low

  * Drop hw-detect debugging attempts.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 13 Jul 2012 16:40:57 +0100

ubiquity (2.11.14) quantal; urgency=low

  * compat/udpkg: Handle 'udpkg -c' from udpkg 1.14, required by hw-detect
    1.89.
  * Automatic update of included source packages: hw-detect 1.89ubuntu1.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 13 Jul 2012 10:27:33 +0100

ubiquity (2.11.13) quantal; urgency=low

  * Add some more debugging around hw-detect.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 12 Jul 2012 14:49:30 +0100

ubiquity (2.11.12) quantal; urgency=low

  * Rebuild with fixed dh_python3 (LP: #1023474).

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 11 Jul 2012 17:56:31 +0100

ubiquity (2.11.11) quantal-proposed; urgency=low

  [ Kent Baxley ]
  * Add the ability to run simple, custom scripts in ubiquity-dm
    (LP: #1017580).

  [ Colin Watson ]
  * Fix excision of code in hw-detect that creates
    /usr/lib/finish-install.d/30hw-detect (not necessary or useful in
    ubiquity, but accidentally broken way back in ubiquity 1.1.0).
  * Temporarily add shell tracing through part of hw-detect in the hope of
    diagnosing LP #1023036.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 11 Jul 2012 11:36:20 +0100

ubiquity (2.11.10) quantal-proposed; urgency=low

  * ubiquity-dm: Use "-background none" rather than no-longer-supported
    "-nr" when doing a smooth transition from Plymouth (LP: #1019377).
  * Automatic update of included source packages: flash-kernel
    3.0~rc.4ubuntu6.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 09 Jul 2012 18:54:41 +0100

ubiquity (2.11.9) quantal-proposed; urgency=low

  [ Colin Watson ]
  * Update DebconfInstallProgress method names for the python-apt 0.8 API.
  * Automatic update of included source packages: flash-kernel
    3.0~rc.4ubuntu5, partman-base 158ubuntu1, partman-target 78ubuntu1,
    preseed 1.53ubuntu1.

  [ Colin Watson, Dmitrijs Ledkovs ]